@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-08-22T02:02:38Z",
-  "count_outdated" : 267,
-  "uniques_outdated" : 233,
-  "count" : 269,
-  "uniques" : 235,
+  "timestamp" : "2025-08-23T01:58:07Z",
+  "count_outdated" : 268,
+  "uniques_outdated" : 234,
+  "count" : 270,
+  "uniques" : 236,
   "clones" : [
     {
-      "timestamp": "2025-08-08T00:00:00Z",
+      "timestamp": "2025-08-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
@@ -15,7 +15,7 @@
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2025-08-17T00:00:00Z",
+      "timestamp": "2025-08-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
